# Markdown-to-PDF-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py  schemas.py  utils.py
app/api/: documents.py  routes.py
app/core/: config.py  database.py
app/services/: converter.py  pdf_generator.py  storage.py
jenkins_lab/: Dockerfile  docker-compose.yml
nginx/: nginx.conf
